Fix overflowing

--- a/src/output.css
+++ b/src/output.css
@@ -382,6 +382,9 @@
   .overflow-hidden {
     overflow: hidden;
   }
+  .overflow-y-hidden {
+    overflow-y: hidden;
+  }
   .rounded-2xl {
     border-radius: var(--radius-2xl);
   }
